--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "importHelpers": true,
     "module": "commonjs",
     "declaration": true,
     "removeComments": true,
